<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FUN_BisscEvaluator" Id="{7958d450-0a4c-4188-87bd-84e0aca64412}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION FUN_BisscEvaluator : ST_BeamDemand
VAR_INPUT
	encoder : ST_BisscEncoder;
END_VAR
VAR	
	readLoc: ULINT;
	newDemand : ST_BeamDemand;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[readLoc := Encoder.encLoc;
IF readLoc <= Encoder.ncULimit THEN
	newDemand.demand := TRUE;
ELSE
	newDemand.demand := FALSE;
END_IF

IF readLoc <= Encoder.ncULimit THEN 
	newDemand.beamRate := 0;
ELSE
	newDemand.beamRate := 50;
END_IF

FUN_BisscEvaluator := newDemand;]]></ST>
    </Implementation>
    <LineIds Name="FUN_BisscEvaluator">
      <LineId Id="14" Count="12" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>